usagov-233-- H1 spacing issue

--- a/web/themes/custom/usagov/sass/_navigation-page.scss
+++ b/web/themes/custom/usagov/sass/_navigation-page.scss
@@ -3,6 +3,7 @@ $hero: var( $usagov-variables, hero );
 .usagov-hero{
     border-top: 10px solid var( $hero, border-color );
     margin-bottom: 1.5rem;
+    margin-top: -.75rem;
 }
 .usagov-hero__callout{
     background-color: var( $hero, background-color );
